# schema-drift-detector

./: .gitignore  README.md  pyproject.toml
connectors/: base.py
examples/: csv_crawler_agent_output.json  metadata_agent_output.json  people-info.csv  source_schema_identifier_agent_output.json
examples/drift/: csv_crawler_agent_output.json  detector_agent_output.json  metadata_agent_output.json  source_schema_identifier_agent_output.json
examples/no_drfit/: csv_crawler_agent_output.json  detector_agent_no_change_output.json  metadata_agent_output.json  people-info.csv  source_schema_identifier_agent_output.json
infra/neo4j/: debug_queries.cypher  init_schema.cypher
resource/: cypher_script.txt
src/: debug_workflow.py  verify_db_content.py
src/schema_drift_detector/: api.py  crew.py  main.py  snapshot_processor.py
src/schema_drift_detector/agents/: api_crawler_agent.py  csv_crawler_agent.py  database_crawler_agent.py  detector_agent.py  healer_agent.py  metadata_agent.py  notification_agent.py  orchestrator_agent copy.py  orchestrator_agent.py  snapshot_persistence_agent.py  source_schema_identifier_agent.py
src/schema_drift_detector/config/: agents.yaml  tasks.yaml
src/schema_drift_detector/tools/: agent_tools.py
